mongo-express/mongoexpress-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongoexpress-nodeport-svc
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    nodePort: 32000
