mongo-express/mongoexpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
spec:
  # tls:
  # - hosts:
  #   - myapp.com
  #     secretName: myapp-secret-tls
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoexpress-nodeport-service
                port:
                  number: 8081
